welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:23: error: not found: value colonne
    colonne()
    ^